P1: bug double scroll bar

--- a/app/components/footer.module.css
+++ b/app/components/footer.module.css
@@ -6,8 +6,6 @@
   bottom: 0;
   width: 100%;
   text-align: center;
-
-  height: 330px;
 }
 .wave1 {
   z-index: 99;
